--- a/Ejercicios_Computo_enla_nube.ipynb
+++ b/Ejercicios_Computo_enla_nube.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKeQmYLk264MBBtYk8oLPv",
+      "authorship_tag": "ABX9TyM/cuUxpubzQBmG9bw7Gc8J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,11 +56,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "7tNa4VqG6K72"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7tNa4VqG6K72",
+        "outputId": "523ef3eb-937e-45de-ddce-1d5e1a7b548c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "5\n"
+          ]
+        }
+      ],
       "source": [
         "# scopes1.py\n",
         "# definimos una funcion llamada local\n",
@@ -1289,6 +1302,121 @@
             "__closure__ -> None\n",
             "__annotations__ -> {}\n",
             "__kwdefaults__ -> None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio 26"
+      ],
+      "metadata": {
+        "id": "UjJmemqpXxxj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# json_examples/json_basic.py\n",
+        "import json\n",
+        "info = {\n",
+        "    'full_name': 'Sherlock Holmes',\n",
+        "    'address': {\n",
+        "            'street': '221B Baker St',\n",
+        "            'zip': 'NW1 6XE',\n",
+        "            'city': 'London',\n",
+        "            'country': 'UK',\n",
+        "      }\n",
+        "}\n",
+        "print(json.dumps(info, indent=2, sort_keys=True))#se imprime lo de adentro de info"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t6MrZ4b6X0GU",
+        "outputId": "0d98b4b9-a768-466d-b0c3-bf4b1ba4e20a"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"address\": {\n",
+            "    \"city\": \"London\",\n",
+            "    \"country\": \"UK\",\n",
+            "    \"street\": \"221B Baker St\",\n",
+            "    \"zip\": \"NW1 6XE\"\n",
+            "  },\n",
+            "  \"full_name\": \"Sherlock Holmes\"\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejercicio 27"
+      ],
+      "metadata": {
+        "id": "31vc7LiiZK5f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# json_examples/json_cplx.py\n",
+        "import json\n",
+        "class ComplexEncoder(json.JSONEncoder):\n",
+        "    def default(self, obj):\n",
+        "        print(f\"ComplexEncoder.default: {obj=}\")\n",
+        "        if isinstance(obj, complex):\n",
+        "            return {\n",
+        "                '_meta': '_complex',\n",
+        "                'num': [obj.real, obj.imag],\n",
+        "            }\n",
+        "        return super().default(obj)\n",
+        "\n",
+        "data = {\n",
+        "      'an_int': 42,\n",
+        "      'a_float': 3.14159265,\n",
+        "      'a_complex': 3 + 4j,\n",
+        "}\n",
+        "json_data = json.dumps(data, cls=ComplexEncoder)\n",
+        "print(json_data)\n",
+        "\n",
+        "def object_hook(obj):\n",
+        "    print(f\"object_hook: {obj=}\")\n",
+        "    try:\n",
+        "       if obj['_meta'] == '_complex':\n",
+        "           return complex(*obj['num'])\n",
+        "    except KeyError:\n",
+        "       return obj\n",
+        "data_out = json.loads(json_data, object_hook=object_hook)\n",
+        "print(data_out)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lBOM-heyZNPt",
+        "outputId": "254cc543-3f0a-4613-d873-43598051a747"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ComplexEncoder.default: obj=(3+4j)\n",
+            "{\"an_int\": 42, \"a_float\": 3.14159265, \"a_complex\": {\"_meta\": \"_complex\", \"num\": [3.0, 4.0]}}\n",
+            "object_hook: obj={'_meta': '_complex', 'num': [3.0, 4.0]}\n",
+            "object_hook: obj={'an_int': 42, 'a_float': 3.14159265, 'a_complex': (3+4j)}\n",
+            "{'an_int': 42, 'a_float': 3.14159265, 'a_complex': (3+4j)}\n"
           ]
         }
       ]
