--- a/examen_U1.ipynb
+++ b/examen_U1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA/0H4zjhJ0uYV7VImTC0A",
+      "authorship_tag": "ABX9TyP6zXhtSCrEUaXsZjP7ZW97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MoHrK9l0qDpT",
-        "outputId": "bd651eee-ed9c-4164-801b-f8eef6d72682"
+        "outputId": "b9a01b07-c332-4631-eb13-887d8de64759"
       },
       "outputs": [
         {
@@ -58,14 +58,14 @@
       ],
       "source": [
         "n = int(input(\"Elige un numero: \"))\n",
-        "def primo(n):\n",
+        "def is_prime(n):\n",
         "    if n < 2:\n",
         "        return False\n",
         "    for i in range(2,int(n**0.5)+1):\n",
         "        if n % i == 0:\n",
         "            return False\n",
         "    return True\n",
-        "print(\"Es primo? R=\",primo(n))"
+        "print(\"Es primo? R=\", is_prime(n))"
       ]
     },
     {
