--- a/examen_U1.ipynb
+++ b/examen_U1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6zXhtSCrEUaXsZjP7ZW97",
+      "authorship_tag": "ABX9TyOymcJZEX+XH4ZZaNiPge/F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,19 +85,19 @@
         "def is_prime(x):\n",
         "    return all(x % i for i in range(2, x))\n",
         "\n",
-        "def next_prime(x):\n",
+        "def nextprime(x):\n",
         "    return min([a for a in range(x+1, 2*x) if is_prime(a)])\n",
         "n = int(input(\"Teclea un numero para dar el siguiente numero primo: \"))\n",
-        "print(next_prime(n))"
+        "print(nextprime(n))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uhcLjPThqa6m",
-        "outputId": "9511a953-d921-4615-9be3-551dfb4ad090"
+        "outputId": "b21f6724-905d-419b-f1f8-e527d95c1523"
       },
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
