--- a/examen_U1.ipynb
+++ b/examen_U1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOymcJZEX+XH4ZZaNiPge/F",
+      "authorship_tag": "ABX9TyMtDUkY8vVK3IoC1qIlwvUO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Brunoupiic/computo_enla_nube/blob/main/examen_U1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Bruno Zinedin Romero Rodriguez\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2ePdG3sILSmQ"
+      }
     },
     {
       "cell_type": "markdown",
